# Py-Practice-Sessions

./: .gitignore
Advance/: app.py  requirements.txt
Advance/env/: pyvenv.cfg
Basics/: dir.py  list.py  one.py  two.py  zero.py
Jarvis/: app.py
Prompts/: chat_history.txt  chat_prompt_template.py  chatbot.py  prompt_generator.py  promptui.py  pyproject.toml  template.json
Ragsetup/: main.py  pyproject.toml
Ragsetup/Docloaders/: cricket.txt  csvloader.py  demo_sales_data_400_rows.csv  pypdfloader.py  textloader.py  webbaseloader.py
Ragsetup/Textsplitters/: lengthsplitter.py  pydoctextsplitter.py  semantictextsplitter.py  textsplitter.py
codebits/: main.py  pyproject.toml
codebits/chaincodes/: conditionalchains.py  parallelchains.py  sequentialchain.py  simplechain.py
codebits/conceptbrushup/: resume.txt  resume_prompt.txt  resumeanalyzer.py
codebits/parsercodes/: jsonoutputparser.py  pydanticparser.py  stroutputparser.py  structureoutputparser.py
codebits/runnables/: runnablebranch.py  runnablelambda.py  runnableparallel.py  runnablepassthrough.py  runnablesequence.py
py-for-ai/: advance.py  basics.py  get_data.py
py-for-ai/data/: paris_weather.csv
pyactive/: pyproject.toml
the-execution/myproject/: pyproject.toml
the-execution/myproject/langchain_warmup/: summarizer.py
the-execution/myproject/langchain_warmup/chatmodels/: chatmodel.py  chatmodel_hf_api.py
the-execution/myproject/langchain_warmup/embeddedmodels/: docsimilarity.py  embeding_query.py
the-execution/myproject/langchain_warmup/llms/: llmdemo.py
the-execution/myproject/warmup_time/: jd_parser.py  jdintell.py  multi-turn-chatbot.py  streaming-chatbot.py
(+11 files in other folders)
