[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-api-python-client>=2.194.0",
    "google-generativeai>=0.8.6",
    "groq<1",
    "huggingface-hub>=1.10.2",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
   
    "streamlit>=1.56.0",
  
  
]

[tool.uv.workspace]
members = [
    "langchain_warmup/langchain_models",
]
